[tool.poetry]
name = "car-test"
version = "0.1.0"
description = ""
authors = ["sdstevenson <sdstevenson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gpiozero = "^2.0.1"
pygame = "^2.6.1"

[tool.poetry.scripts]
controller = "car_test.controller:main"
test = "car_test.test:main"
servo = "car_test.servos:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
